--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Timed Quiz</title>
 </head>
 <body id="body">
@@ -25,7 +25,7 @@
         </h3>
     </footer>
 
-    <script src="./quiz.js"></script>
+    <script src="./assets/js/quiz.js"></script>
 
 </body>
 </html>
